package com.geladaobebidas.app.enums;

public enum CategoriaProduto {
    CERVEJA, REFRIGERANTE, AGUA, ENERGETICO, DESTILADO, VINHOS, WHISKY, VODKA, OUTROS;
}
