package com.geladaobebidas.app.enums;

public enum TipoEmbalagem {
    FARDO, CAIXA, UNIDADE;
}
