package com.geladaobebidas.app.enums;

public enum TipoMovimentacao {
    ENTRADA, SAIDA;
}
