package com.geladaobebidas.app.enums;

public enum UnidadeVolume {
    ML, LITRO;
}
